<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:id="@+id/book_image_list"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo"></ImageView>

        <TextView
            android:id="@+id/book_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title_hint_book_row"
            android:textAlignment="center"
            android:textColor="#656565"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/book_author_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/author_hint_book_row"
            android:textAlignment="center"
            android:textColor="#656565"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/book_isbn_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/isbn_hint_book_row"
            android:textAlignment="center"
            android:textColor="#656565"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/book_timestamp_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/date_hit_book_row"
            android:textAlignment="center"
            android:textColor="#656565"
            android:textStyle="italic" />




    </LinearLayout>


</androidx.cardview.widget.CardView>