<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Login"
    android:padding="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:id="@+id/email_login_form">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="18dp"
            android:maxLines="1"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/advent_pro"
            android:text="@string/login_text"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_register_text"
            android:textSize="18dp"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/register_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/advent_pro"
            android:text="@string/register_text"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            android:layout_gravity="center"
            />

        </LinearLayout>







</LinearLayout>