<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:orientation="vertical"
    tools:context=".CreateAccount"
    android:padding="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_acct"
        android:hint="@string/username_hint"
        android:maxLines="1"
        android:paddingBottom="16dp"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:textAlignment="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/register_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/advent_pro"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/create_acct_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>